--- a/thesis.tex
+++ b/thesis.tex
@@ -1087,7 +1087,7 @@ NIM-ES2-4 (4 порта GigabitEthernet) &
                                    & GigabitEthernet0/7     & R\_1\_L3\_GOSTEV              \\ \hline
 \multirow{3}{*}{SW\_2\_L3\_GOSTEV} & GigabitEthernet0/1-0/5 & SW\_1-5\_L2\_GOSTEV           \\ \cline{2-3} 
                                    & GigabitEthernet0/6     & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
-                                   & GigabitEthernet0/7     & R\_1\_L3\_GOSTEV              \\ \hline
+                                   & GigabitEthernet0/7-0/10     & R\_1\_L3\_GOSTEV              \\ \hline
 R\_1\_L3\_GOSTEV                   & GigabitEthernet0/1-0/2 & SW\_1-2\_L3\_GOSTEV           \\ \hline
 \end{tabular}
 \end{table}
@@ -1430,7 +1430,154 @@ R\_1\_L3\_GOSTEV & GigabitEthernet0/1-0/2 & SW\_1-2\_L3\_GOSTEV & \multicolumn{1
 поэтому настройка VLAN и STP для данных объектов предприятия может быть опущена.
 
 \subsection{Планирование сети уровня 3}
-В данном разделе необходимо спроектировать распределение IP адрессов
+В данном разделе необходимо спроектировать распределение IP адрессов.
+
+Планирование адресации для главного здания представлено в Таблице \ref{table:mainDepIpPlan}.
+\begin{table}[H]
+\centering
+\small
+\caption{Планирование адресации для главного задния}
+\label{table:mainDepIpPlan}
+\begin{tabular}{|m{4cm}|m{3cm}|m{8cm}|}
+\hline
+\textbf{Сегмент/маска IPсети} & \textbf{Адрес шлюза} & \textbf{Описание сегмента сети} \\
+\hline
+192.168.2.0/24 & 192.168.2.254 & Сегмент сети, к которому относится руководство предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.3.0/24 & 192.168.3.254 & Сегмент сети, к которому отсносится коммерческий отдел предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.4.0/24 & 192.168.4.254 & Сегмент сети, к которому относится бухгалтерия предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.5.0/24 & 192.168.5.254 & Сегмент сети, к которому относится отдел кадров предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.6.0/24 & 192.168.6.254 & Сегмент сети, к которому относится отдел закупок предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.7.0/24 & 192.168.7.254 & Сегмент сети, к которому относится отдел продаж предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.8.0/24 & 192.168.8.254 & Сегмент сети, к которому относится АХО предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.9.0/24 & 192.168.9.254 & Сегмент сети, к которому относится ИТ-департамент предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.10.0/24 & 192.168.10.254 & Сегмент сети, к которому относится профильный отдел предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.11.0/24 & 192.168.11.254 & Сегмент сети, к которому относится сервер предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.100.0/24 & 192.168.100.254 & Сегмент управляющей сети для устройств уровня 2 со шлюзом, расположенным на коммутаторе уровня агрегации 
+\\ \hline
+192.168.110.0/30 & - & Сегмент сети для между ядром и уровнем агрегации
+\\ \hline
+192.168.111.0/30 & - & Сегмент сети для между ядром и уровнем агрегации
+\\ \hline
+\end{tabular}
+\end{table}
+
+
+План режима распределения IP адресов для главного здания представлен в Таблице \ref{table:mainDepIpDistributionPlan}.
+
+\begin{table}[H]
+\centering
+\small
+\caption{Планирование режима распределения IP адресов для главного задния}
+\label{table:mainDepIpDistributionPlan}
+\begin{tabular}{|p{4cm}|p{3cm}|p{8cm}|}
+\hline
+\textbf{Сегмент/Интерфейс IP-сети } & \textbf{Режим распределения} & \textbf{Описание режима распределения} 
+\\ \hline
+192.168.2.0/24 \newline
+192.168.3.0/24 \newline
+192.168.4.0/24 \newline
+192.168.5.0/24 \newline
+192.168.6.0/24 \newline
+192.168.7.0/24 \newline
+192.168.8.0/24 \newline
+192.168.9.0/24 \newline
+192.168.10.0/24 \newline
+&
+DHCP
+&
+Распределяется коммутатором уровня агрегации. 
+\\ \hline
+192.168.11.0/24 & Статический & Статически настроенные IP-адреса управления устройством
+\\ \hline
+192.168.100.0/24 & Статический & Статически настроенные IP-адреса управления устройством 
+\\ \hline
+192.168.110.0/30 & Статический & Статически настроенные взаимосвязанные IP-адреса
+\\ \hline
+192.168.111.0/30 & Статический & Статически настроенные взаимосвязанные IP-адреса
+\\ \hline
+\end{tabular}
+\end{table}
+
+
+Планирование адресации для филиала представлено в Таблице \ref{table:filialIpPlan}.
+\begin{table}[H]
+\centering
+\small
+\caption{Планирование адресации для филиала}
+\label{table:filialIpPlan}
+\begin{tabular}{|m{4cm}|m{3cm}|m{8cm}|}
+\hline
+\textbf{Сегмент/маска IPсети} & \textbf{Адрес шлюза} & \textbf{Описание сегмента сети} \\
+\hline
+192.168.2.0/24 & 192.168.2.254 & Сегмент сети, к которому относится руководство предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.3.0/24 & 192.168.3.254 & Сегмент сети, к которому относится бухгалтерия предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.4.0/24 & 192.168.4.254 & Сегмент сети, к которому относится отдел кадров предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.5.0/24 & 192.168.5.254 & Сегмент сети, к которому относится отдел закупок предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.6.0/24 & 192.168.6.254 & Сегмент сети, к которому относится отдел продаж предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.7.0/24 & 192.168.7.254 & Сегмент сети, к которому относится АХО предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.8.0/24 & 192.168.8.254 & Сегмент сети, к которому относится ИТ-департамент предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.9.0/24 & 192.168.9.254 & Сегмент сети, к которому относится профильный отдел предприятия, со шлюзом, расположенным на коммутаторе уровня агрегации
+\\ \hline
+192.168.100.0/24 & 192.168.100.254 & Сегмент управляющей сети для устройств уровня 2 со шлюзом, расположенным на коммутаторе уровня агрегации 
+\\ \hline
+192.168.110.0/30 & - & Сегмент сети для между ядром и уровнем агрегации
+\\ \hline
+192.168.111.0/30 & - & Сегмент сети для между ядром и уровнем агрегации
+\\ \hline
+\end{tabular}
+\end{table}
+
+
+План режима распределения IP адресов для главного здания представлен в Таблице \ref{table:filialDistributionPlan}.
+
+\begin{table}[H]
+\centering
+\small
+\caption{Планирование режима распределения IP адресов для филиала}
+\label{table:filialDistributionPlan}
+\begin{tabular}{|p{4cm}|p{3cm}|p{8cm}|}
+\hline
+\textbf{Сегмент/Интерфейс IP-сети } & \textbf{Режим распределения} & \textbf{Описание режима распределения} 
+\\ \hline
+192.168.2.0/24 \newline
+192.168.3.0/24 \newline
+192.168.4.0/24 \newline
+192.168.5.0/24 \newline
+192.168.6.0/24 \newline
+192.168.7.0/24 \newline
+192.168.8.0/24 \newline
+192.168.9.0/24 \newline
+&
+DHCP
+&
+Распределяется коммутатором уровня агрегации. 
+\\ \hline
+192.168.100.0/24 & Статический & Статически настроенные IP-адреса управления устройством 
+\\ \hline
+192.168.110.0/30 & Статический & Статически настроенные взаимосвязанные IP-адреса
+\\ \hline
+192.168.111.0/30 & Статический & Статически настроенные взаимосвязанные IP-адреса
+\\ \hline
+\end{tabular}
+\end{table}
+
 
 
 \begingroup
